welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:22: error: ';' expected but ',' found.
estSurBiscuit(), porteBiscuit(), prendBiscuit() et poseBiscuit() 
               ^