welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while (!estSurBiscuit) {
    avance()

}
gauche()
gauche()
porteBiscuit()
while (!estSurBiscuit) {
    avance()

}
droite()
droite()
avance()
poseBiscuit()





estSurBiscuit(), porteBiscuit(), prendBiscuit() et poseBiscuit()